# conventional-prs

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  GITHUB_APP.md  README.md  README.typescript.md  TEST_VALIDATION.md  action.yml  deno.json  entrypoint.sh  mod.ts  prek.toml  test-file.md
.cargo/: config.toml
.githooks/: commit-msg
.github/: app-manifest.json  semantic.yml
.github/workflows/: ci.yml  docker.yml  example-usage.yml  jsr-publish.yml  pr-validation.yml  publish-action.yml  release.yml
action/: index.mjs  index.test.mjs
action/src/: index.js
lib/: rs_lib.d.ts  rs_lib.internal.js  rs_lib.js  rs_lib.wasm
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
scripts/: benchmark-cli-vs-wasm.sh  benchmark_wasm.ts  build-action.mjs  publish-alpha.sh  validate-commit-title.sh
src/: config.rs  lib.rs  main.rs  parser.rs  report.rs
tests/: integration_test.rs  jsr_api_test.ts
tests/__snapshots__/: jsr_api_test.ts.snap
tests/fixtures/: test-config.json  test-config.jsonc  test-config.toml  test-config.yml
