[package]
name = "conventional-prs"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.10"
ariadne = "0.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
json_comments = "0.2"
anyhow = "1.0"
thiserror = "2.0"
strsim = "0.11"

[dev-dependencies]
pretty_assertions = "1.4"
